src/objects/Financial_Application_Income__c.object
<CustomObject>
    <description>Income Details for household members</description>
    <fields>
        <fullName>Annual_Commissions_Bonuses_Tips__c</fullName>
        <label>Annual Commissions/Bonuses/Tips</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Income_Amount__c</fullName>
        <formula>CASE(RecordType.Name,
&quot;Employment Income&quot;, Paycheck_1_Gross_Pay_Annualized__c,
&quot;Self-Employment Income&quot;, Self_Employment_Declared_Income__c,
&quot;Other Income&quot;, Total_Other_Income_Rec_d_Annually__c,
&quot;Unemployed&quot;, Annual_Unemployment_Benefits_Amount__c,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Employment Income - Most Recent Gross Pay Annualized
Self-Employment Income - Self Employment Declared Income (P&amp;L Annualized or 2-Year Average)
Other Income - Total Other Income Received Annually
Unemployed - Annual Unemployment Benefits Amount</inlineHelpText>
        <label>Annual Income Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Overtime__c</fullName>
        <label>Annual Overtime</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Unemployment_Benefits_Amount__c</fullName>
        <label>Annual Unemployment Benefits Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annualized_Income__c</fullName>
        <label>Annualized Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Applicant_Self_employed__c</fullName>
        <label>Applicant Self-employed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Applicant_Unemployed__c</fullName>
        <label>Applicant Unemployed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Base_Annual_Employment_Income__c</fullName>
        <label>Base Annual Employment Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Child_Support_Alimony_Received_Annually__c</fullName>
        <label>Child Support/Alimony Received Annually</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_of_Most_Recent_P_L_Stmt__c</fullName>
        <label>Date of Most Recent P&amp;L Stmt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employer_Address__c</fullName>
        <label>Employer Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Employer_Name__c</fullName>
        <label>Employer Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employment_Status__c</fullName>
        <label>Employment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full Time</fullName>
                </value>
                <value>
                    <fullName>Part Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Financial_Application_Member_Name__c</fullName>
        <formula>Financial_Application_Member__r.Member_Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Financial Application Member Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Application_Member__c</fullName>
        <label>Financial Application Member</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Financial_Application_Member__c.Financial_Application__c</field>
                <operation>equals</operation>
                <valueField>$Source.Financial_Application__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Financial_Application_Member__c</referenceTo>
        <relationshipLabel>Financial Application Incomes for this Member</relationshipLabel>
        <relationshipName>Financial_Application_Incomes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Financial_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial Application</label>
        <referenceTo>Financial_Application__c</referenceTo>
        <relationshipLabel>Financial Application - Member Incomes</relationshipLabel>
        <relationshipName>Financial_Application_Incomes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>First_Date_of_Employment__c</fullName>
        <label>First Date of Employment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>How_many_times_year_get_P_L_Statement__c</fullName>
        <label>How many times/year get P/L Statement?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Income_from_Land_or_Business_Annually__c</fullName>
        <label>Income from Land or Business Annually</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interest_Dividends_Received_Annually__c</fullName>
        <label>Interest/Dividends Received Annually</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Month_Unemployed__c</fullName>
        <label>Month Unemployed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Most_Recent_Profit_or_Loss_Amount__c</fullName>
        <label>Most Recent Profit or Loss Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Profit_or_Loss_Status__c</fullName>
        <label>Most Recent Profit or Loss Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Profit</fullName>
                </value>
                <value>
                    <fullName>Loss</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Most_Recent_Tax_Year_1__c</fullName>
        <label>Most Recent Tax Year 1</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Tax_Year_2__c</fullName>
        <label>Most Recent Tax Year 2</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Incomes_Received_Annually__c</fullName>
        <label>Other Incomes Received Annually</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pay_Amount__c</fullName>
        <inlineHelpText>What is the payment amount on the pay statement for the associated pay date?</inlineHelpText>
        <label>Pay Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pay_Date__c</fullName>
        <label>Pay Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pay_Period_Frequency__c</fullName>
        <label>Pay Period Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Bi-weekly</fullName>
                </value>
                <value>
                    <fullName>Semi-monthly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Paycheck_1_Gross_Pay_Annualized__c</fullName>
        <formula>Paycheck_1_Gross_Pay_Period_Average__c * Total_Number_of_Pay_Periods_Annually__c</formula>
        <inlineHelpText>Paycheck 1 Gross Pay Period Average * Total Number of Pay Periods Annually</inlineHelpText>
        <label>Paycheck 1 Gross Pay Annualized</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Paycheck_1_Gross_Pay_Period_Average__c</fullName>
        <formula>Paycheck_1_Year_To_Date_Gross_Amount__c / Paycheck_1_Period__c</formula>
        <inlineHelpText>Paycheck 1 Year-to-Date Gross Amount / Pay Period #</inlineHelpText>
        <label>Paycheck 1 Gross Pay Period Average</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Paycheck_1_Pay_Date__c</fullName>
        <label>Paycheck 1 Pay Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Paycheck_1_Period__c</fullName>
        <label>Paycheck 1 Period #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Paycheck_1_Total_Gross_Amount__c</fullName>
        <label>Paycheck 1 Total Gross Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Paycheck_1_Year_To_Date_Gross_Amount__c</fullName>
        <label>Paycheck 1 Year-To-Date Gross Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Paycheck_2_Gross_Pay_Annualized__c</fullName>
        <formula>Paycheck_2_Gross_Pay_Period_Average__c * Total_Number_of_Pay_Periods_Annually__c</formula>
        <inlineHelpText>Paycheck 2 Gross Pay Period Average * Total Number of Pay Periods Annually</inlineHelpText>
        <label>Paycheck 2 Gross Pay Annualized</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Paycheck_2_Gross_Pay_Period_Average__c</fullName>
        <formula>Paycheck_2_Year_To_Date_Gross_Amount__c / Paycheck_2_Period__c</formula>
        <label>Paycheck 2 Gross Pay Period Average</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Paycheck_2_Pay_Date__c</fullName>
        <label>Paycheck 2 Pay Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Paycheck_2_Period__c</fullName>
        <label>Paycheck 2 Period #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Paycheck_2_Total_Gross_Amount__c</fullName>
        <label>Paycheck 2 Total Gross Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Paycheck_2_Year_To_Date_Gross_Amount__c</fullName>
        <label>Paycheck 2 Year-To-Date Gross Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Paycheck_3_Gross_Pay_Annualized__c</fullName>
        <formula>Paycheck_3_Gross_Pay_Period_Average__c * Total_Number_of_Pay_Periods_Annually__c</formula>
        <inlineHelpText>Paycheck 3 Gross Pay Period Average * Total Number of Pay Periods Annually</inlineHelpText>
        <label>Paycheck 3 Gross Pay Annualized</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Paycheck_3_Gross_Pay_Period_Average__c</fullName>
        <formula>Paycheck_3_Year_To_Date_Gross_Amount__c / Paycheck_3_Period__c</formula>
        <label>Paycheck 3 Gross Pay Period Average</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Paycheck_3_Pay_Date__c</fullName>
        <label>Paycheck 3 Pay Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Paycheck_3_Period__c</fullName>
        <label>Paycheck 3 Period #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Paycheck_3_Total_Gross_Amount__c</fullName>
        <label>Paycheck 3 Total Gross Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Paycheck_3_Year_To_Date_Gross_Amount__c</fullName>
        <label>Paycheck 3 Year-To-Date Gross Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Personal_Income_Id__c</fullName>
        <label>Personal Income Id</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Public_Assistance_Received_Annually__c</fullName>
        <label>Public Assistance Received Annually</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Self_Employment_Declared_Income__c</fullName>
        <formula>CASE( Self_Employment_Income_Declaration_Type__c,
&quot;Profit/Loss Amount Annualized&quot;, Self_Employment_Income_P_L_Annualized__c ,
&quot;Two Most Recent Tax Year Average Annual Income&quot;, Self_Employment_Income_2_Year_Average__c,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Self Employment - Declared Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Self_Employment_Income_2_Year_Average__c</fullName>
        <formula>(Tax_Year_1_Taxable_Annual_Income__c + Tax_Year_2_Taxable_Annual_Income__c) / 2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Self Employment Income - 2 Year Average</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Self_Employment_Income_Declaration_Type__c</fullName>
        <label>Self-Employment Income Declaration Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Profit/Loss Amount Annualized</fullName>
                </value>
                <value>
                    <fullName>Two Most Recent Tax Year Average Annual Income</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Self_Employment_Income_P_L_Annualized__c</fullName>
        <formula>IF(
Most_Recent_Profit_or_Loss_Amount__c * How_many_times_year_get_P_L_Statement__c &gt; 0,
Most_Recent_Profit_or_Loss_Amount__c * How_many_times_year_get_P_L_Statement__c,
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Profit or Loss Amount * How many times/year get P/L Statement</inlineHelpText>
        <label>Self Employment Income - P&amp;L Annualized</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Self_Employment_Starting_Month__c</fullName>
        <label>Self Employment Starting Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Self_Employment_Starting_Year__c</fullName>
        <label>Self Employment Starting Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Social_Security_Pensions_Rec_d_Annually__c</fullName>
        <label>Social Security/Pensions Rec&apos;d Annually</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_Year_1_Taxable_Annual_Income__c</fullName>
        <label>Tax Year 1 Taxable Annual Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_Year_2_Taxable_Annual_Income__c</fullName>
        <label>Tax Year 2 Taxable Annual Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Pay_Periods_Annually__c</fullName>
        <label>Total Number of Pay Periods Annually</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Other_Income_Rec_d_Annually__c</fullName>
        <formula>Interest_Dividends_Received_Annually__c + Child_Support_Alimony_Received_Annually__c + Social_Security_Pensions_Rec_d_Annually__c + Public_Assistance_Received_Annually__c + Income_from_Land_or_Business_Annually__c + Other_Incomes_Received_Annually__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Interest/Dividends Received Annually +
Child Support/Alimony Received Annually +
Social Security/Pensions Rec&apos;d Annually +
Public Assistance Received Annually +
Income from Land or Business Annually +
Other Incomes Received Annually</inlineHelpText>
        <label>Total Other Income Rec&apos;d Annually</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_Unemployed__c</fullName>
        <inlineHelpText>Please enter the 4-digit year of unemployment.</inlineHelpText>
        <label>Year Unemployed</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Financial Application Income</label>
    <nameField>
        <displayFormat>FAI-{YY}-{0}</displayFormat>
        <label>FA-Income Line Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Application Incomes</pluralLabel>
    <recordTypes>
        <fullName>Employment_Income</fullName>
        <active>true</active>
        <description>Income earned from being employed.</description>
        <label>Employment Income</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other_Income</fullName>
        <active>true</active>
        <description>Other Income from sources such as Interest/Dividends, Child Support/Alimony, Social Security/Pensions, etc.</description>
        <label>Other Income</label>
    </recordTypes>
    <recordTypes>
        <fullName>Self_Employment_Income</fullName>
        <active>true</active>
        <description>Income earned from being self-employed.</description>
        <label>Self-Employment Income</label>
    </recordTypes>
    <recordTypes>
        <fullName>Unemployed</fullName>
        <active>true</active>
        <description>Unemployed Income Status (fill in additional unemployment details here)</description>
        <label>Unemployed</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Loss_Requires_Negative_Value</fullName>
        <active>true</active>
        <description>The Profit or Loss Amount needs to be a negative value if Profit or Loss status is &quot;Loss&quot;.</description>
        <errorConditionFormula>AND(
ISPICKVAL(Most_Recent_Profit_or_Loss_Status__c,&quot;Loss&quot;),
Most_Recent_Profit_or_Loss_Amount__c &gt; 0
)</errorConditionFormula>
        <errorDisplayField>Most_Recent_Profit_or_Loss_Amount__c</errorDisplayField>
        <errorMessage>The Profit or Loss Amount needs to be a negative value if Profit or Loss status is &quot;Loss&quot;.</errorMessage>
    </validationRules>
</CustomObject>